tests/positive/Internal/Norm.juvix
module Norm;

open import Stdlib.Prelude;

main : Nat;
main := λ{x := x + 2} 1;
