tests/negative/NotARecord.juvix
module NotARecord;

type T := t;
open T using {t};

f : T := t @T{x := 1};
